Add Client-ID to the settings file after Twitch update.

--- a/settings.properties
+++ b/settings.properties
@@ -2,6 +2,8 @@
 broadcaster=
 # oauth token with channel:read:subscriptions permissions.
 oauth=
+# Client ID to conform with new requirements as of May 1, 2020.
+clientId=
 # Endpoint of subscriptions
 endpoint=https://api.twitch.tv/helix/subscriptions
 # GET URL Parameter for the broadcaster's ID.
@@ -9,7 +11,7 @@ paramBroadcasterId=broadcaster_id
 # GET URL Parameter for the pagination.
 paramCursor=after
 # Debug messages, 1 = on, anything else = off.
-debug=0
+debug=1
 # Time delay between updates in seconds.
 timedelay=10
 # Offset for sub points to account for upgrades.
